--- a/Backend.yml
+++ b/Backend.yml
@@ -18,12 +18,44 @@ paths:
             schema:
               $ref: "#/components/schemas/CreateTaskRequest"
       responses:
-        '200':
+        "200":
           description: "タスク作成成功 レスポンス"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/CreateTaskResponse"
+
+  /delete/{taskId}:
+    delete:
+      summary: "taskの削除"
+      description: "指定されたtaskを削除します。将来的には認証されたユーザーのタスクのみ削除可能になります。"
+      operationId: "deleteTask"
+      parameters:
+        - name: taskId
+          in: path
+          required: true
+          description: "削除するタスクのID"
+          schema:
+            type: string
+      responses:
+        "200":
+          description: "タスク削除成功 レスポンス"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DeleteTaskResponse"
+        "404":
+          description: "タスクが見つかりません"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: "このタスクを削除する権限がありません（将来実装予定）"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
 components:
   schemas:
@@ -54,5 +86,27 @@ components:
       required:
         - taskId
         - title
-        - content  
-      
+        - content
+    DeleteTaskResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          description: "削除成功メッセージ"
+        taskId:
+          type: string
+          description: "削除されたタスクのID"
+      required:
+        - message
+        - taskId
+    ErrorResponse:
+      type: object
+      properties:
+        error:
+          type: string
+          description: "エラーメッセージ"
+        code:
+          type: string
+          description: "エラーコード"
+      required:
+        - error
